...
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/scroll"
tools:context="th.co.siamkubota.kubota.fragment.Step1CustomerDetailFragment">

    <LinearLayout
        android:id="@id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp">


...

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"></RelativeLayout>
        <LinearLayout
            style="@style/LinearLayoutSpinner"
            android:id="@+id/jobLayout">

            <ImageView
                android:src="@drawable/kindofjob_icon"
                style="@style/ImageIconStyle"/>

            <th.co.siamkubota.kubota.utils.ui.CustomSpinner
                android:id="@+id/spinnerJobType"
                android:prompt="@string/service_hint_job_type"
                style="@style/SpinnerStyle"
                android:tag="required"/>

        </LinearLayout>

...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/jobcode_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextTaskCode"
                android:hint="@string/service_hint_job_id"
                style="@style/EditTextStyle"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="14"
                android:tag="required formatted"/>
...
            android:layout_height="0.7dp"
            android:background="@color/light_gray_border"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroupUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
...
                android:text="@string/service_radio_caption_owner"
                android:layout_marginRight="20dp"
                android:textIsSelectable="false"
                android:background="@android:color/transparent"
                />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_state"
                android:textSize="15dp"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="10dp"
...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/name_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextName"
                android:hint="@string/service_hint_name"
                style="@style/EditTextStyle"
                android:tag="required"/>
            <TextView
                android:id="@+id/requireName"
                style="@style/textViewAstericStyle"
...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/tel_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextTel1"
                android:hint="@string/service_hint_tel_1"
                style="@style/EditTextStyle"
                android:inputType="phone"
                android:digits="0123456789"
                android:tag="required"/>
            <TextView
...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/tel_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextTel2"
                android:hint="@string/service_hint_tel_2"
                style="@style/EditTextStyle"
                android:inputType="phone"
                android:digits="0123456789"
                />

...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/serial_number_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextCarNumber"
                android:hint="@string/service_hint_machine_number"
                style="@style/EditTextStyle"
                android:tag="required"/>
            <TextView
                android:id="@+id/requireMachineNumber"
                style="@style/textViewAstericStyle"
...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/engine_number_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextEngineNumber"
                android:hint="@string/service_hint_engine_number"
                style="@style/EditTextStyle"
                android:tag="required"/>
            <TextView
                android:id="@+id/requireEngineNumber"
                style="@style/textViewAstericStyle"
...
        <LinearLayout
            style="@style/LinearLayoutTextView">
            <ImageView
                android:src="@drawable/times_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/editTextWorkHours"
                android:hint="@string/service_hint_working_hours"
                style="@style/EditTextStyle"
                android:inputType="numberDecimal"
                android:tag="required"/>
            <TextView
                android:id="@+id/requireWorkHours"
...
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="-2dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/locationButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/currentlocation_icon"
...
