...
            android:background="@android:color/transparent"
            android:textColor="@color/button_text_gray_selector"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="1"
            android:focusable="true"
            android:id="@+id/button1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/button_text_gray_selector"
...
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/pagination_arrow_right"
            android:id="@+id/nextButton"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </LinearLayout>

<!--    <android.support.v7.widget.ButtonBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
...
